# q-tune-sdk

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPATIBILITY.md  CONTRIBUTING.md  DISCLAIMER.md  Dockerfile  LICENSE  NOTICE  NOTICE.md  README.md  docker-build.ps1  docker-build.sh  monitor.ps1  monitor.sh
.devcontainer/: devcontainer.json
cmake/: qtune_plugin.cmake
docs/: ALLOWED_SYMBOLS.md  DEPLOY.md  FAQ.md  GETTING_STARTED.md  GLOSSARY.md  MONITOR.md  REFERENCE.md  TOUCH.md  TROUBLESHOOTING.md
examples/example_standby/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/example_standby/main/: CMakeLists.txt  example_standby.cpp  idf_component.yml  stub_app.c
examples/example_tuner/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/example_tuner/main/: CMakeLists.txt  example_tuner.cpp  idf_component.yml  stub_app.c
include/: README.md  defines.h  qtune_plugin.h  qtune_plugin_abi.h  qtune_plugin_host_api.h  qtune_plugin_state_api.h  tuner_math.h  tuner_standby_ui_interface.h  tuner_ui_interface.h
plugins/standby/bouncer/: CMakeLists.txt  README.md  sdkconfig.defaults
plugins/standby/bouncer/main/: CMakeLists.txt  bouncer.cpp  idf_component.yml  stub_app.c
plugins/standby/hyperdrive/: CMakeLists.txt  README.md  sdkconfig.defaults
plugins/standby/hyperdrive/main/: CMakeLists.txt  hyperdrive.cpp  idf_component.yml  (+1 more)
plugins/standby/jamagotchi/: ART.md  CMakeLists.txt  README.md  sdkconfig.defaults
plugins/tuner/gauge/: CMakeLists.txt  README.md  sdkconfig.defaults
plugins/tuner/phase/: CMakeLists.txt  README.md
plugins/tuner/phase/main/: CMakeLists.txt  idf_component.yml  phase.cpp  stub_app.c
plugins/tuner/strobe/: CMakeLists.txt  README.md  sdkconfig.defaults
template/: README.md
template/standby/: CMakeLists.txt  sdkconfig.defaults
template/standby/main/: CMakeLists.txt  idf_component.yml  plugin.cpp  stub_app.c
template/tuner/: CMakeLists.txt  sdkconfig.defaults
template/tuner/main/: plugin.cpp
tools/: new_plugin.py  validate_plugin.py
(+82 files in other folders)
